fix cutoff homescreen

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,5 @@
 .hero{
-  min-height: 80vh;
+  min-height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
